@@ -16,13 +16,13 @@
  */
 package org.apache.solr.cloud.overseer;
 
+import static org.apache.solr.cloud.overseer.CollectionMutator.checkCollectionKeyExistence;
+
 import java.lang.invoke.MethodHandles;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Set;
-
-import com.google.common.collect.ImmutableSet;
 import org.apache.solr.client.solrj.cloud.DistribStateManager;
 import org.apache.solr.client.solrj.cloud.SolrCloudManager;
 import org.apache.solr.client.solrj.impl.SolrClientCloudManager;
@@ -30,11 +30,10 @@ import org.apache.solr.cloud.Overseer;
 import org.apache.solr.cloud.api.collections.Assign;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
-import org.apache.solr.common.cloud.PerReplicaStatesOps;
 import org.apache.solr.common.cloud.Replica;
-import org.apache.solr.common.cloud.PerReplicaStates;
 import org.apache.solr.common.cloud.RoutingRule;
 import org.apache.solr.common.cloud.Slice;
+import org.apache.solr.common.cloud.Slice.SliceStateProps;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.cloud.ZkCoreNodeProps;
 import org.apache.solr.common.cloud.ZkNodeProps;
@@ -44,14 +43,13 @@ import org.apache.solr.common.util.Utils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static org.apache.solr.cloud.overseer.CollectionMutator.checkCollectionKeyExistence;
-
 public class SliceMutator {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  public static final String PREFERRED_LEADER_PROP = CollectionAdminParams.PROPERTY_PREFIX + "preferredleader";
+  public static final String PREFERRED_LEADER_PROP =
+      CollectionAdminParams.PROPERTY_PREFIX + "preferredleader";
 
-  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES = ImmutableSet.of(PREFERRED_LEADER_PROP);
+  public static final Set<String> SLICE_UNIQUE_BOOLEAN_PROPERTIES = Set.of(PREFERRED_LEADER_PROP);
 
   protected final SolrCloudManager cloudManager;
   protected final DistribStateManager stateManager;
@@ -90,22 +88,25 @@ public class SliceMutator {
       coreNodeName = Assign.assignCoreNodeName(stateManager, collection);
     }
     String nodeName = message.getStr(ZkStateReader.NODE_NAME_PROP);
-    String baseUrl = Utils.getBaseUrlForNodeName(nodeName, cloudManager.getClusterStateProvider().getClusterProperty(ZkStateReader.URL_SCHEME, "http"));
-    Replica replica = new Replica(coreNodeName, Utils.makeMap(
-            ZkStateReader.CORE_NAME_PROP, message.getStr(ZkStateReader.CORE_NAME_PROP),
-            ZkStateReader.STATE_PROP, message.getStr(ZkStateReader.STATE_PROP),
-            ZkStateReader.NODE_NAME_PROP, nodeName,
-            ZkStateReader.BASE_URL_PROP, baseUrl,
-            ZkStateReader.REPLICA_TYPE, message.get(ZkStateReader.REPLICA_TYPE)), coll, slice);
+    String baseUrl =
+        Utils.getBaseUrlForNodeName(
+            nodeName,
+            cloudManager
+                .getClusterStateProvider()
+                .getClusterProperty(ZkStateReader.URL_SCHEME, "http"));
+    Replica replica =
+        new Replica(
+            coreNodeName,
+            Utils.makeMap(
+                ZkStateReader.CORE_NAME_PROP, message.getStr(ZkStateReader.CORE_NAME_PROP),
+                ZkStateReader.STATE_PROP, message.getStr(ZkStateReader.STATE_PROP),
+                ZkStateReader.NODE_NAME_PROP, nodeName,
+                ZkStateReader.BASE_URL_PROP, baseUrl,
+                ZkStateReader.REPLICA_TYPE, message.get(ZkStateReader.REPLICA_TYPE)),
+            coll,
+            slice);
 
-    if (collection.isPerReplicaState()) {
-      PerReplicaStates prs = PerReplicaStates.fetch(collection.getZNode(), zkClient, collection.getPerReplicaStates());
-      return new ZkWriteCommand(coll, updateReplica(collection, sl, replica.getName(), replica),
-          PerReplicaStatesOps.addReplica(replica.getName(), replica.getState(), replica.isLeader(), prs), true);
-    } else {
-      return new ZkWriteCommand(coll, updateReplica(collection, sl, replica.getName(), replica));
-    }
-
+    return new ZkWriteCommand(coll, updateReplica(collection, sl, replica.getName(), replica));
   }
 
   public ZkWriteCommand removeReplica(ClusterState clusterState, ZkNodeProps message) {
@@ -126,22 +127,18 @@ public class SliceMutator {
       if (replica != null && (nodeName == null || nodeName.equals(replica.getNodeName()))) {
         Map<String, Replica> newReplicas = slice.getReplicasCopy();
         newReplicas.remove(cnn);
-        slice = new Slice(slice.getName(), newReplicas, slice.getProperties(),collection);
+        slice = new Slice(slice.getName(), newReplicas, slice.getProperties(), collection);
       }
       newSlices.put(slice.getName(), slice);
     }
-
-
-    if (coll.isPerReplicaState()) {
-      PerReplicaStatesOps replicaOps = PerReplicaStatesOps.deleteReplica(cnn, PerReplicaStates.fetch(coll.getZNode(), zkClient, coll.getPerReplicaStates()) );
-      return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices), replicaOps, true);
-    } else {
-      return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices));
-    }
+    return new ZkWriteCommand(collection, coll.copyWithSlices(newSlices));
   }
 
   public ZkWriteCommand setShardLeader(ClusterState clusterState, ZkNodeProps message) {
-    String leaderUrl = message.getStr(ZkStateReader.BASE_URL_PROP) != null ? ZkCoreNodeProps.getCoreUrl(message) : null;
+    String leaderUrl =
+        message.getStr(ZkStateReader.BASE_URL_PROP) != null
+            ? ZkCoreNodeProps.getCoreUrl(message)
+            : null;
     String collectionName = message.getStr(ZkStateReader.COLLECTION_PROP);
     String sliceName = message.getStr(ZkStateReader.SHARD_ID_PROP);
     DocCollection coll = clusterState.getCollectionOrNull(collectionName);
@@ -159,36 +156,31 @@ public class SliceMutator {
     final Map<String, Replica> newReplicas = new LinkedHashMap<>();
     for (Replica replica : slice.getReplicas()) {
       // TODO: this should only be calculated once and cached somewhere?
-      String coreURL = ZkCoreNodeProps.getCoreUrl(replica.getBaseUrl(), replica.getStr(ZkStateReader.CORE_NAME_PROP));
+      String coreURL =
+          ZkCoreNodeProps.getCoreUrl(
+              replica.getBaseUrl(), replica.getStr(ZkStateReader.CORE_NAME_PROP));
 
-      if (replica == oldLeader && !coreURL.equals(leaderUrl)) {
-        replica = new ReplicaMutator(cloudManager).unsetLeader(replica);
+      if (replica.equals(oldLeader) && !coreURL.equals(leaderUrl)) {
+        replica = ReplicaMutator.unsetLeader(replica);
       } else if (coreURL.equals(leaderUrl)) {
-        newLeader = replica = new ReplicaMutator(cloudManager).setLeader(replica);
+        newLeader = replica = ReplicaMutator.setLeader(replica);
       }
 
       newReplicas.put(replica.getName(), replica);
     }
 
     Map<String, Object> newSliceProps = slice.shallowCopy();
-    newSliceProps.put(Slice.REPLICAS, newReplicas);
+    newSliceProps.put(SliceStateProps.REPLICAS, newReplicas);
     slice = new Slice(slice.getName(), newReplicas, slice.getProperties(), collectionName);
-    if (coll.isPerReplicaState()) {
-      PerReplicaStates prs = PerReplicaStates.fetch(coll.getZNode(), zkClient, coll.getPerReplicaStates());
-      return new ZkWriteCommand(collectionName, CollectionMutator.updateSlice(collectionName, coll, slice),
-          PerReplicaStatesOps.flipLeader(
-              slice.getReplicaNames(),
-              newLeader == null ? null : newLeader.getName(),
-              prs), false);
-    } else {
-      return new ZkWriteCommand(collectionName, CollectionMutator.updateSlice(collectionName, coll, slice));
-    }
+    return new ZkWriteCommand(
+        collectionName, CollectionMutator.updateSlice(collectionName, coll, slice));
   }
 
   public ZkWriteCommand updateShardState(ClusterState clusterState, ZkNodeProps message) {
     String collectionName = message.getStr(ZkStateReader.COLLECTION_PROP);
     if (!checkCollectionKeyExistence(message)) return ZkStateWriter.NO_OP;
-    log.info("Update shard state invoked for collection: {} with message: {}", collectionName, message);
+    log.info(
+        "Update shard state invoked for collection: {} with message: {}", collectionName, message);
 
     DocCollection collection = clusterState.getCollection(collectionName);
     Map<String, Slice> slicesCopy = new LinkedHashMap<>(collection.getSlicesMap());
@@ -198,22 +190,25 @@ public class SliceMutator {
 
       Slice slice = collection.getSlice(key);
       if (slice == null) {
-        throw new RuntimeException("Overseer.updateShardState unknown collection: " + collectionName + " slice: " + key);
+        throw new RuntimeException(
+            "Overseer.updateShardState unknown collection: " + collectionName + " slice: " + key);
       }
       if (log.isInfoEnabled()) {
         log.info("Update shard state {} to {}", key, message.getStr(key));
       }
       Map<String, Object> props = slice.shallowCopy();
-      
+
       if (Slice.State.getState(message.getStr(key)) == Slice.State.ACTIVE) {
-        props.remove(Slice.PARENT);
+        props.remove(SliceStateProps.PARENT);
         props.remove("shard_parent_node");
         props.remove("shard_parent_zk_session");
       }
       props.put(ZkStateReader.STATE_PROP, message.getStr(key));
       // we need to use epoch time so that it's comparable across Overseer restarts
-      props.put(ZkStateReader.STATE_TIMESTAMP_PROP, String.valueOf(cloudManager.getTimeSource().getEpochTimeNs()));
-      Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props,collectionName);
+      props.put(
+          ZkStateReader.STATE_TIMESTAMP_PROP,
+          String.valueOf(cloudManager.getTimeSource().getEpochTimeNs()));
+      Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props, collectionName);
       slicesCopy.put(slice.getName(), newSlice);
     }
 
@@ -232,12 +227,12 @@ public class SliceMutator {
     DocCollection collection = clusterState.getCollection(collectionName);
     Slice slice = collection.getSlice(shard);
     if (slice == null) {
-      throw new RuntimeException("Overseer.addRoutingRule collection: " + collectionName + ", unknown slice: " + shard);
+      throw new RuntimeException(
+          "Overseer.addRoutingRule collection: " + collectionName + ", unknown slice: " + shard);
     }
 
     Map<String, RoutingRule> routingRules = slice.getRoutingRules();
-    if (routingRules == null)
-      routingRules = new HashMap<>();
+    if (routingRules == null) routingRules = new HashMap<>();
     RoutingRule r = routingRules.get(routeKey);
     if (r == null) {
       Map<String, Object> map = new HashMap<>();
@@ -257,9 +252,9 @@ public class SliceMutator {
     Map<String, Object> props = slice.shallowCopy();
     props.put("routingRules", routingRules);
 
-    Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props,collectionName);
-    return new ZkWriteCommand(collectionName,
-        CollectionMutator.updateSlice(collectionName, collection, newSlice));
+    Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props, collectionName);
+    return new ZkWriteCommand(
+        collectionName, CollectionMutator.updateSlice(collectionName, collection, newSlice));
   }
 
   public ZkWriteCommand removeRoutingRule(final ClusterState clusterState, ZkNodeProps message) {
@@ -268,8 +263,11 @@ public class SliceMutator {
     String shard = message.getStr(ZkStateReader.SHARD_ID_PROP);
     String routeKeyStr = message.getStr("routeKey");
 
-    log.info("Overseer.removeRoutingRule invoked for collection: {} shard: {} routeKey: {}"
-        , collectionName, shard, routeKeyStr);
+    log.info(
+        "Overseer.removeRoutingRule invoked for collection: {} shard: {} routeKey: {}",
+        collectionName,
+        shard,
+        routeKeyStr);
 
     DocCollection collection = clusterState.getCollection(collectionName);
     Slice slice = collection.getSlice(shard);
@@ -282,25 +280,26 @@ public class SliceMutator {
       routingRules.remove(routeKeyStr); // no rules left
       Map<String, Object> props = slice.shallowCopy();
       props.put("routingRules", routingRules);
-      Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props,collectionName);
-      return new ZkWriteCommand(collectionName,
-          CollectionMutator.updateSlice(collectionName, collection, newSlice));
+      Slice newSlice = new Slice(slice.getName(), slice.getReplicasCopy(), props, collectionName);
+      return new ZkWriteCommand(
+          collectionName, CollectionMutator.updateSlice(collectionName, collection, newSlice));
     }
 
     return ZkStateWriter.NO_OP;
   }
 
-  public static DocCollection updateReplica(DocCollection collection, final Slice slice, String coreNodeName, final Replica replica) {
+  public static DocCollection updateReplica(
+      DocCollection collection, final Slice slice, String coreNodeName, final Replica replica) {
     Map<String, Replica> replicasCopy = slice.getReplicasCopy();
     if (replica == null) {
       replicasCopy.remove(coreNodeName);
     } else {
       replicasCopy.put(replica.getName(), replica);
     }
-    Slice newSlice = new Slice(slice.getName(), replicasCopy, slice.getProperties(), collection.getName());
+    Slice newSlice =
+        new Slice(slice.getName(), replicasCopy, slice.getProperties(), collection.getName());
     log.debug("Old Slice: {}", slice);
     log.debug("New Slice: {}", newSlice);
     return CollectionMutator.updateSlice(collection.getName(), collection, newSlice);
   }
 }
-
