@@ -16,20 +16,20 @@
  */
 package org.apache.solr.util;
 
-import junit.framework.TestCase;
-
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collections;
 import java.util.Set;
+import org.apache.solr.SolrTestCase;
 
-public class ModuleUtilsTest extends TestCase {
+public class ModuleUtilsTest extends SolrTestCase {
   private Path mockRootDir;
   private final Set<String> expectedMods = Set.of("mod1", "mod2");
 
   @Override
   public void setUp() throws Exception {
+    super.setUp();
     mockRootDir = setupMockInstallDir(expectedMods);
   }
 
@@ -46,8 +46,9 @@ public class ModuleUtilsTest extends TestCase {
   }
 
   public void testGetModuleLibPath() {
-    assertEquals(mockRootDir.resolve("modules")
-        .resolve("mod1").resolve("lib"), ModuleUtils.getModuleLibPath(mockRootDir, "mod1"));
+    assertEquals(
+        mockRootDir.resolve("modules").resolve("mod1").resolve("lib"),
+        ModuleUtils.getModuleLibPath(mockRootDir, "mod1"));
   }
 
   public void testResolveFromSyspropOrEnv() {
@@ -62,10 +63,15 @@ public class ModuleUtilsTest extends TestCase {
   }
 
   public void testResolveModules() {
-    assertEquals(Set.of("foo", "bar", "baz", "mod1"), ModuleUtils.resolveModulesFromStringOrSyspropOrEnv("foo ,bar, baz,mod1"));
-    assertEquals(Collections.emptySet(), ModuleUtils.resolveModulesFromStringOrSyspropOrEnv(""));
+    assertEquals(
+        Set.of("foo", "bar", "baz", "mod1"),
+        Set.copyOf(ModuleUtils.resolveModulesFromStringOrSyspropOrEnv("foo ,bar, baz,mod1")));
+    assertEquals(
+        Collections.emptySet(), Set.copyOf(ModuleUtils.resolveModulesFromStringOrSyspropOrEnv("")));
     System.setProperty("solr.modules", "foo ,bar, baz,mod1");
-    assertEquals(Set.of("foo", "bar", "baz", "mod1"), ModuleUtils.resolveModulesFromStringOrSyspropOrEnv(null));
+    assertEquals(
+        Set.of("foo", "bar", "baz", "mod1"),
+        Set.copyOf(ModuleUtils.resolveModulesFromStringOrSyspropOrEnv(null)));
     System.clearProperty("solr.modules");
   }
 
