@@ -18,6 +18,7 @@
 package org.apache.solr.prometheus.scraper;
 
 import com.carrotsearch.randomizedtesting.annotations.ThreadLeakLingering;
+import io.prometheus.client.Collector;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
@@ -27,8 +28,6 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.concurrent.ExecutorService;
 import java.util.stream.Collectors;
-
-import io.prometheus.client.Collector;
 import org.apache.solr.client.solrj.impl.CloudSolrClient;
 import org.apache.solr.client.solrj.impl.NoOpResponseParser;
 import org.apache.solr.common.cloud.ClusterState;
@@ -37,13 +36,13 @@ import org.apache.solr.common.cloud.Replica;
 import org.apache.solr.common.cloud.Slice;
 import org.apache.solr.common.util.ExecutorUtil;
 import org.apache.solr.common.util.IOUtils;
+import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.apache.solr.prometheus.PrometheusExporterTestBase;
 import org.apache.solr.prometheus.collector.MetricSamples;
 import org.apache.solr.prometheus.exporter.MetricsConfiguration;
 import org.apache.solr.prometheus.exporter.PrometheusExporterSettings;
 import org.apache.solr.prometheus.exporter.SolrClientFactory;
 import org.apache.solr.prometheus.utils.Helpers;
-import org.apache.solr.common.util.SolrNamedThreadFactory;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -56,24 +55,21 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
   private ExecutorService executor;
 
   private SolrCloudScraper createSolrCloudScraper() {
-    CloudSolrClient solrClient = new CloudSolrClient.Builder(
-        Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
-        .build();
-
-    NoOpResponseParser responseParser = new NoOpResponseParser();
-    responseParser.setWriterType("json");
-
-    solrClient.setParser(responseParser);
+    var solrClient =
+        new CloudSolrClient.Builder(
+                Collections.singletonList(cluster.getZkServer().getZkAddress()), Optional.empty())
+            .withResponseParser(new NoOpResponseParser("json"))
+            .build();
 
     solrClient.connect();
 
     SolrClientFactory factory = new SolrClientFactory(PrometheusExporterSettings.builder().build());
 
-    return new SolrCloudScraper(solrClient, executor, factory);
+    return new SolrCloudScraper(solrClient, executor, factory, "test");
   }
 
   private ClusterState getClusterState() {
-    return cluster.getSolrClient().getZkStateReader().getClusterState();
+    return cluster.getSolrClient().getClusterState();
   }
 
   private DocCollection getCollectionState() {
@@ -84,8 +80,11 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
   @Before
   public void setUp() throws Exception {
     super.setUp();
-    executor = ExecutorUtil.newMDCAwareFixedThreadPool(25, new SolrNamedThreadFactory("solr-cloud-scraper-tests"));
-    configuration = Helpers.loadConfiguration("conf/prometheus-solr-exporter-scraper-test-config.xml");
+    executor =
+        ExecutorUtil.newMDCAwareFixedThreadPool(
+            25, new SolrNamedThreadFactory("solr-cloud-scraper-tests"));
+    configuration =
+        Helpers.loadConfiguration("conf/prometheus-solr-exporter-scraper-test-config.xml");
     solrCloudScraper = createSolrCloudScraper();
   }
 
@@ -102,34 +101,37 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
 
   @Test
   public void pingCollections() throws Exception {
-    Map<String, MetricSamples> collectionMetrics = solrCloudScraper.pingAllCollections(
-        configuration.getPingConfiguration().get(0));
+    Map<String, MetricSamples> collectionMetrics =
+        solrCloudScraper.pingAllCollections(configuration.getPingConfiguration().get(0));
 
     assertEquals(1, collectionMetrics.size());
     assertTrue(collectionMetrics.containsKey(PrometheusExporterTestBase.COLLECTION));
 
-    List<Collector.MetricFamilySamples> collectionSamples = collectionMetrics.get(PrometheusExporterTestBase.COLLECTION).asList();
+    List<Collector.MetricFamilySamples> collectionSamples =
+        collectionMetrics.get(PrometheusExporterTestBase.COLLECTION).asList();
     assertEquals(1, collectionSamples.size());
     Collector.MetricFamilySamples collection1Metrics = collectionSamples.get(0);
     assertEquals("solr_ping", collection1Metrics.name);
     assertEquals(1, collection1Metrics.samples.size());
 
     assertEquals(1.0, collection1Metrics.samples.get(0).value, 0.001);
-    assertEquals(Collections.singletonList("zk_host"), collection1Metrics.samples.get(0).labelNames);
-    assertEquals(Collections.singletonList(cluster.getZkServer().getZkAddress()), collection1Metrics.samples.get(0).labelValues);
+    assertEquals(List.of("zk_host", "cluster_id"), collection1Metrics.samples.get(0).labelNames);
+    assertEquals(
+        List.of(cluster.getZkServer().getZkAddress(), "test"),
+        collection1Metrics.samples.get(0).labelValues);
   }
 
   @Test
   public void pingCores() throws Exception {
-    Map<String, MetricSamples> allCoreMetrics = solrCloudScraper.pingAllCores(
-        configuration.getPingConfiguration().get(0));
+    Map<String, MetricSamples> allCoreMetrics =
+        solrCloudScraper.pingAllCores(configuration.getPingConfiguration().get(0));
 
     Map<String, DocCollection> collectionStates = getClusterState().getCollectionsMap();
 
-    long coreCount = collectionStates.entrySet()
-        .stream()
-        .mapToInt(entry -> entry.getValue().getReplicas().size())
-        .sum();
+    long coreCount =
+        collectionStates.entrySet().stream()
+            .mapToInt(entry -> entry.getValue().getReplicas().size())
+            .sum();
 
     assertEquals(coreCount, allCoreMetrics.size());
 
@@ -146,18 +148,19 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
 
   @Test
   public void queryCollections() throws Exception {
-    List<Collector.MetricFamilySamples> collection1Metrics = solrCloudScraper.collections(
-        configuration.getCollectionsConfiguration().get(0)).asList();
+    List<Collector.MetricFamilySamples> collection1Metrics =
+        solrCloudScraper.collections(configuration.getCollectionsConfiguration().get(0)).asList();
 
     assertEquals(2, collection1Metrics.size());
     Collector.MetricFamilySamples liveNodeSamples = collection1Metrics.get(0);
     assertEquals("solr_collections_live_nodes", liveNodeSamples.name);
-    assertEquals("See following URL: https://solr.apache.org/guide/collections-api.html#clusterstatus", liveNodeSamples.help);
+    assertEquals(
+        "See following URL: https://solr.apache.org/guide/solr/latest/deployment-guide/cluster-node-management.html#clusterstatus",
+        liveNodeSamples.help);
     assertEquals(1, liveNodeSamples.samples.size());
 
     assertEquals(
-        getClusterState().getLiveNodes().size(),
-        liveNodeSamples.samples.get(0).value, 0.001);
+        getClusterState().getLiveNodes().size(), liveNodeSamples.samples.get(0).value, 0.001);
 
     Collector.MetricFamilySamples shardLeaderSamples = collection1Metrics.get(1);
 
@@ -167,34 +170,44 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
 
     Collection<Slice> slices = getCollectionState().getSlices();
 
-    Set<String> leaderCoreNames = slices.stream()
-        .map(slice -> collection.getLeader(slice.getName()).getCoreName())
-        .collect(Collectors.toSet());
+    Set<String> leaderCoreNames =
+        slices.stream()
+            .map(slice -> collection.getLeader(slice.getName()).getCoreName())
+            .collect(Collectors.toSet());
 
     for (Collector.MetricFamilySamples.Sample sample : shardLeaderSamples.samples) {
       assertEquals("solr_collections_shard_leader", sample.name);
-      assertEquals(Arrays.asList("collection", "shard", "replica", "core", "type", "zk_host"), sample.labelNames);
-      assertEquals(leaderCoreNames.contains(sample.labelValues.get(3)) ? 1.0 : 0.0, sample.value, 0.001);
+      assertEquals(
+          Arrays.asList("collection", "shard", "replica", "core", "type", "zk_host", "cluster_id"),
+          sample.labelNames);
+      assertEquals(
+          leaderCoreNames.contains(sample.labelValues.get(3)) ? 1.0 : 0.0, sample.value, 0.001);
     }
   }
 
   @Test
   public void metricsForEachHost() throws Exception {
-    Map<String, MetricSamples> metricsByHost = solrCloudScraper.metricsForAllHosts(configuration.getMetricsConfiguration().get(0));
+    Map<String, MetricSamples> metricsByHost =
+        solrCloudScraper.metricsForAllHosts(configuration.getMetricsConfiguration().get(0));
 
     List<Replica> replicas = getCollectionState().getReplicas();
     assertEquals(replicas.size(), metricsByHost.size());
 
     for (Replica replica : replicas) {
-      List<Collector.MetricFamilySamples> replicaSamples = metricsByHost.get(replica.getBaseUrl()).asList();
+      List<Collector.MetricFamilySamples> replicaSamples =
+          metricsByHost.get(replica.getBaseUrl()).asList();
       assertEquals(1, replicaSamples.size());
       assertEquals("solr_metrics_jvm_buffers", replicaSamples.get(0).name);
+
+      assertEquals("cluster_id", replicaSamples.get(0).samples.get(0).labelNames.get(2));
+      assertEquals("test", replicaSamples.get(0).samples.get(0).labelValues.get(2));
     }
   }
 
   @Test
   public void search() throws Exception {
-    List<Collector.MetricFamilySamples> samples = solrCloudScraper.search(configuration.getSearchConfiguration().get(0)).asList();
+    List<Collector.MetricFamilySamples> samples =
+        solrCloudScraper.search(configuration.getSearchConfiguration().get(0)).asList();
 
     assertEquals(1, samples.size());
 
@@ -206,5 +219,4 @@ public class SolrCloudScraperTest extends PrometheusExporterTestBase {
       assertEquals(FACET_VALUES.get(sample.labelValues.get(0)), sample.value, 0.001);
     }
   }
-
 }
